# arena-hackathon-attribution-patching

./: .gitignore  ACDC++_ Fast automated circuit discovery using attribution patching.md  README.md  activation_patch.py  attributed_acdc.py  attribution_patch.py  attribution_path_patch.py  environment.yaml  induction.py  induction_experiment.py  main.py  neel_head_to_head_path_patch_attribution.py  path_patch.py  pyproject.toml  requirements.txt
attribution_patching/: plotly_utils.py  utils.py
s_inhibition_patching/: s_inhibition_heads.py  verify_attribution_patching.py
