[tool.poetry]
name = "arena-hackathon-attribution-patching"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "attribution_patching"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.13.1"
transformer-lens = "^1.2.2"
ipykernel = "^6.23.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
